--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "sails-hook-orm": "^4.0.0",
     "sails-hook-sockets": "^2.0.0",
     "sails-mongo": "^2.0.0",
-    "sails-pagination": "^0.0.2"
+    "sails-pagination": "^0.0.2",
+    "skipper-gridfs": "^1.0.2"
   },
   "devDependencies": {
     "eslint": "5.16.0"
